# p1afempy

./: .gitignore  .python-version  LICENSE  README.md  mesh.py  pyproject.toml  requirements.txt  setup.py  solve_laplace.py
.github/workflows/: python-app.yml
jupyter_notebooks/: Untitled.ipynb
p1afempy/: __init__.py  data_structures.py  indicators.py  io_helpers.py  mesh.py  refinement.py  solve_laplace.py  solvers.py  utility.py
p1afempy/tests/auto/: example_setup.py  test_edge_based.py  test_evaluate_on_coordinates.py  test_general_stiffness_matrices.py  test_get_weighted_mass_matrix.py  test_indicators.py  test_mesh.py  test_refinement.py  test_sanity_check.py  test_solver.py
p1afempy/tests/data/get_neighbours/: src.m
p1afempy/tests/data/matlab_performance/newest_vertex_bisection/: readme.md  src.m
p1afempy/tests/data/matlab_performance/solve_laplace/: f.m  g.m  my_example_simple_laplace.m  readme.md  uD.m
p1afempy/tests/data/matlab_performance/stiffness_matrix_assembly/: readme.md  src.m
p1afempy/tests/data/refine_rg/: README.md
p1afempy/tests/data/trefined_rg/: README.md  src.m
p1afempy/tests/manual/: performance_test.py  performance_test_refineNVB.py  performance_test_refineRG_single.py  performance_test_solve_laplace.py  performance_test_stiffnes_matrix.py  read_data.py  test_get_rectangular_mesh.py  test_refine_rg.py  test_result.py
tests/auto/: test_mesh.py  test_solver.py
